# WebUtau

./: .gitignore  LICENSE  README.md  dev-mac.sh  dev-source.bat  dev.bat  host-dialog.css  index.html  melody test 1.sln  package-lock.json  package.json  singer.html  start-server.bat  start-v3.bat  start.bat  style.css  vite.config.js  voice-runtime.css  voice-runtime.html
3/: app.js  index.html  style.css
OpenUtau/OpenUtau.Core/: DocManager.cs  MachineLearningPhonemizer.cs  OpenUtau.Core.csproj
client/: app.js  index.html  logic-style-demo.html  style-demo-v2.html  style.css
docs/reverb/: README.md  reverb-capability-architecture-roadmap.md  reverb-construction-pr-plan.md  reverb-interface-contracts.md  reverb-migration-test-rollout-runbook.md  reverb-performance-debug-architecture.md
scripts/: build-reading-dict.mjs  check-max-lines.mjs  create-full-backup.ps1  max-lines-baseline.json  prepare-tauri-assets.mjs  run-tauri-frontend.mjs  start-seedvc-service.bat  start-tunnel.mjs
scripts/seedvc_service/: app.py  models.py  seedvc_runner.py  storage.py
server/DiffSingerApi/: Program.cs  (+2 more)
server/DiffSingerApi.Tests/: DiffSingerApi.Tests.csproj  LanguageRoutingServiceTest.cs
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  local_server.rs  main.rs  tunnel.rs
src-tauri/windows/: webutau-installer.nsi
test/: decodeMidiText.test.mjs  kanjiToKana.test.mjs  sourceSamplerRegistry.test.mjs  sourceSamplerRegistryCache.test.mjs  trackInsertCatalog.test.mjs
(+192 files in other folders)
