[package]
name = "webutau-desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "sync", "time", "net", "fs"] }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
bytes = "1"
once_cell = "1"
futures-util = "0.3"
